Bug 78348 - PDF: Loading bar stays after export DOCX
Summary: PDF: Loading bar stays after export DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: All All
: low trivial
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0
Keywords: bibisected, regression
: 79233 (view as bug list)
Depends on:
Blocks: PDF-Export DOCX File-Progress-Bar
  Show dependency treegraph
 
Reported: 2014-05-06 17:45 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-09-29 18:58 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
the loading bar showing after pdf export (92.68 KB, image/jpeg)
2014-05-06 17:45 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-05-06 17:45:06 UTC
Created attachment 98575 [details]
the loading bar showing after pdf export

Was testing out 4.3 alpha and noticed after it finishes exporting a PDF, it retains the 100% progress bar and has 'Loading document...' on the left when it had 'Export as PDF' during the pdf exporting process.
Comment 1 tommy27 2014-05-06 20:32:04 UTC
I see no issue under Win7x64 using 4.3.0.0.alpha1+
Build ID: a1dd961c3093f5f7624e4d1f2240e9120fd13f23
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-06_11:47:48

please retest under recent build and specify O/S

p.s. anytime you report bugs agains 4.3.x master it's better to copy and paste build details (see my post) from menu Help
Comment 2 Yousuf Philips (jay) (retired) 2014-05-06 20:41:47 UTC
I had seen it on the latest build for windows on the sunday (4th) when i visited my friend and i see that the build i'm using now is older than that (28th april), so i'll test on the latest build to confirm again.

Will remember next time to paste the build if i report any from the 4.3 branch. :)
Comment 3 Yousuf Philips (jay) (retired) 2014-05-06 21:39:00 UTC
Yes it seems to be gone, but after upgrading i had to file this bug 78359.
Comment 4 tommy27 2014-05-06 21:43:53 UTC
marking as RESOLVED WFM
Comment 5 Yousuf Philips (jay) (retired) 2014-05-09 12:24:49 UTC
showed up again. :(

Version: 4.3.0.0.alpha1+
Build ID: 6cc92a2fead337eef3d9cc3e5818cfcc505e4651
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-05-07_05:49:36
Comment 6 Yousuf Philips (jay) (retired) 2014-05-24 18:23:47 UTC
confirmed again today.

Version: 4.3.0.0.beta1
Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f
Comment 8 Yousuf Philips (jay) (retired) 2014-05-25 02:29:30 UTC
confirmed with the wordperfect wpd file found in bug 78105.
Comment 9 Joel Madero 2014-05-25 03:25:48 UTC
I can't confirm with that last document (the word perfect document) - testing the other docx now
Comment 10 Joel Madero 2014-05-25 04:07:04 UTC
Ubuntu 14.04 x64
LibreOffice 4.3 beta1

Confirmed with both .docx files.

Steps to reproduce:
1. Open one of the two docx files listed in comment 7
2. Export to pdf

Observed: the bar fills up and gets to 100% and then sticks there but you are still able to work on the file

Expected: Export completes and bar goes away


New
Trivial - won't cause any real problems because you can still work on the file but still a regression and a bug
Low - bumped up from lowest because it's a regression


Bibisect Below:
 904ddd441078ad55fe23b61be38efcf6d7e05021 is the first bad commit
commit 904ddd441078ad55fe23b61be38efcf6d7e05021
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon May 12 02:45:55 2014 +0000

    source-hash-eceba5512636445c9ce827e2d6151875a4fc4673
    
    commit eceba5512636445c9ce827e2d6151875a4fc4673
    Author:     Eike Rathke <erack@redhat.com>
    AuthorDate: Sat Mar 22 03:08:50 2014 +0100
    Commit:     Eike Rathke <erack@redhat.com>
    CommitDate: Sat Mar 22 03:43:42 2014 +0100
    
        no need to use the getter here
    
        Change-Id: I5bbec2c06a641729194ceee3882b88e7372d41a9

:100644 100644 72f1592f15110c1514b32308a0a74b8db311e7c4 2aaf839e81bfe698f6a0a8e974a8e6be6afb624d M	ccache.log
:100644 100644 31282591d5e24e71d76d258a5ad5e408c931b39d bb5a2c64d9c281fcae0a61ca87a99bac03e28d7d M	commitmsg
:100644 100644 e0c15174328ecf469154dd915b1db31d426bc4db f8f89802bf56def0915b08f39f2823a6960692bb M	make.log
:040000 040000 6201f1722de5826235386e7a2b189cdf26a0a499 8b25d749761db74ffcc5ac818945c69decd41724 M	opt


# bad: [a92705c1fabafddd43d175a0714855cd22551232] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [6ab7f53af36f13bbefdd4e4fcbd3d1ea432a77d9] source-hash-22029c7e17b4cb48acb058d47ec9c3b6b8b6b294
git bisect start 'latest' 'oldest'
# good: [bebf9d31c8fe9de96798484288a0fffc4d54917d] source-hash-09e5de8278dd8f13adcf614db35c8a8a04ba8e47
git bisect good bebf9d31c8fe9de96798484288a0fffc4d54917d
# bad: [fac643700ecfabc737836bbed068776f34037d53] source-hash-40a61d93ade494fa98c23a9fd8776c8dadf8f30f
git bisect bad fac643700ecfabc737836bbed068776f34037d53
# good: [d97d068402198fd528087c954ff8bf7fc2380a77] source-hash-3d1b1eea83703919c43620f9adef05e5b24c4bed
git bisect good d97d068402198fd528087c954ff8bf7fc2380a77
# bad: [4bf5bbc5af411318f6507cbd13c220069da40347] source-hash-e9509e54b45fc429a93975917dca2ec343e5f48d
git bisect bad 4bf5bbc5af411318f6507cbd13c220069da40347
# skip: [3b5a7843bab0f8e2c3e2c073600c40c345882368] source-hash-c7363cb6d1d31f2a7d40a76e62b5934629a1a8a1
git bisect skip 3b5a7843bab0f8e2c3e2c073600c40c345882368
# bad: [3c1ab23558692285230ec53d78a1224f9a5cbd13] source-hash-722c82b018327c1f9578ddc533ebbb06080848eb
git bisect bad 3c1ab23558692285230ec53d78a1224f9a5cbd13
# bad: [7080d6b380e45b67417ffba4b6cf41a6e6cb07ed] source-hash-1b922da415339726fb0186246dba6a03429b33bf
git bisect bad 7080d6b380e45b67417ffba4b6cf41a6e6cb07ed
# good: [067df32035ccda57de88749512c424b54ce0477f] source-hash-c8239a1dd46c78f89fa31599036300ecf60108b5
git bisect good 067df32035ccda57de88749512c424b54ce0477f
# bad: [904ddd441078ad55fe23b61be38efcf6d7e05021] source-hash-eceba5512636445c9ce827e2d6151875a4fc4673
git bisect bad 904ddd441078ad55fe23b61be38efcf6d7e05021
# good: [e1bac1284723354103e3df2469f5ebd5c9bbc3c1] source-hash-f2130cea98f6c9ce7c90207828f5d0c7ec3e4020
git bisect good e1bac1284723354103e3df2469f5ebd5c9bbc3c1
# first bad commit: [904ddd441078ad55fe23b61be38efcf6d7e05021] source-hash-eceba5512636445c9ce827e2d6151875a4fc4673
Comment 11 Jorendc 2014-05-25 18:58:19 UTC
@Miklos: any chance http://cgit.freedesktop.org/libreoffice/core/commit/?id=fdacaab2485fa42648ae96348b9ad6a9e1f49424 is related to this issue?
Comment 12 Yousuf Philips (jay) (retired) 2014-05-25 23:13:11 UTC
*** Bug 79233 has been marked as a duplicate of this bug. ***
Comment 13 Miklos Vajna 2014-05-27 09:11:36 UTC
Yes, this is my fault, will take care of it.
Comment 14 Commit Notification 2014-05-27 09:24:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd1abdce1eafa7f2225e4050d1a075154b5e7d67

fdo#78348 DOCX import: end progressbar after parsing is done



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2014-05-27 09:29:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dc17b03f29e206c4d06b047934a2d6d68a288b06&h=libreoffice-4-3

fdo#78348 DOCX import: end progressbar after parsing is done


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Robinson Tryon (qubit) 2015-12-17 08:01:25 UTC Comment hidden (obsolete)