fdo#78348 DOCX import: end progressbar after parsing is done

Change-Id: Id3db99a7ea341bcfc9bf2cd2b718e70a17d41f76
(cherry picked from commit cd1abdce1eafa7f2225e4050d1a075154b5e7d67)